# JADE_DSD

./: README.md
jade-master/: .gitignore  .pdm-python  README.md  app.py  dist.css  dist.html  dist.js  jade.html  jade.js  labs.json  login.html  otp.html  pyproject.toml  run.bat  save_project.html  server.py  share_project.html  signup.html  tempCodeRunnerFile.py  test.py  theapp.db  user_projects.html
jade-master/dev/: cntl.py  dist.py  main.py  model.py  otp.py  tempCodeRunnerFile.py
jade-master/dev/migrations/versions/: 1b02285b58e5_.py  28645720bd76_.py  4d4db505b71c_.py  4eee533c1921_.py  554e635e2197_.py  5ea96e924737_.py  c234c29f7b49_.py  c9c07a370a34_.py
jade-master/jacob/: test.py
jade-master/migrations/versions/: 4dacb6d2144c_.py  a1a4716e0652_.py
jade-master/templates/: base.html
