[project]
name = "New-folder-2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ManeliFotoutan", email = "122699209+ManeliFotoutan@users.noreply.github.com"},
]
dependencies = [
    "flask>=3.0.3",
    "flask-migrate>=4.0.7",
    "Flask-SQLAlchemy>=3.1.1",
    "flask-cors>=4.0.1",
    "cryptography>=43.0.0",
    "Fernet>=1.0.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
